src/objects/scZimmic__PostItem__c.object
<CustomObject>
    <fields>
        <fullName>scZimmic__feedItemId__c</fullName>
        <label>feedItemId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>scZimmic__hashtag__c</fullName>
        <label>hashtag</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>scZimmic__servicePostId__c</fullName>
        <label>servicePostId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>scZimmic__service_name__c</fullName>
        <label>service_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PostItem</label>
    <nameField>
        <label>PostItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PostItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>